--- a/joinmarket/package.json
+++ b/joinmarket/package.json
@@ -2,6 +2,7 @@
   "name": "joinmarket",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:28183",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
