--- a/joinmarket/package.json
+++ b/joinmarket/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://localhost:28183",
   "dependencies": {
+    "@ibunker/bitcoin-react": "^0.1.13-cd",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
