--- a/joinmarket/package.json
+++ b/joinmarket/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactn": "^2.2.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
