--- a/joinmarket/package.json
+++ b/joinmarket/package.json
@@ -5,18 +5,18 @@
   "proxy": "https://localhost:28183",
   "dependencies": {
     "@ibunker/bitcoin-react": "^0.1.13-cd",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.1.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "moving-letters": "^1.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactn": "^2.2.7",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
