--- a/joinmarket/package.json
+++ b/joinmarket/package.json
@@ -5,14 +5,16 @@
   "proxy": "https://localhost:28183",
   "dependencies": {
     "@ibunker/bitcoin-react": "^0.1.13-cd",
+    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "moving-letters": "^1.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.1",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactn": "^2.2.7",
