--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "joinmarket",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:28183",
+  "homepage": ".",
   "devDependencies": {
     "@ibunker/bitcoin-react": "^0.1.13-cd",
     "@popperjs/core": "^2.11.0",
-    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "http-proxy-middleware": "^2.0.1",
     "moving-letters": "^1.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
-    "react-router-bootstrap": "^0.25.0",
+    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "reactn": "^2.2.7",
