--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.26.0",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "reactn": "^2.2.7",
+    "react-router-dom": "^6.1.1",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.2"
   },
   "dependencies": {
