--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "http-proxy-middleware": "^2.0.1",
     "moving-letters": "^1.0.1",
     "react": "^17.0.2",
@@ -17,7 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.2"
   },
   "dependencies": {
