--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joinmarket",
+  "name": "joinmarket-web-ui",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
@@ -14,10 +14,10 @@
     "http-proxy-middleware": "^2.0.1",
     "moving-letters": "^1.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.26.0",
-    "react-router-dom": "^6.1.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.2"
   },
