--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "joinmarket-web-ui",
-  "version": "0.1.0",
+  "name": "joinmarket-webui",
+  "version": "0.0.1",
   "private": true,
+  "description": "JoinMarket Web UI",
+  "repository": "git@github.com:joinmarket-webui/joinmarket-webui.git",
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "homepage": ".",
   "devDependencies": {
     "@ibunker/bitcoin-react": "^0.1.13-cd",
