--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buffer": "^6.0.3",
     "http-proxy-middleware": "^2.0.1",
     "moving-letters": "^1.0.1",
+    "nth-check": ">=2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
