fix: use correct irc host in docker setup

--- a/docker/regtest/dockerfile-deps/joinmarket/default.cfg
+++ b/docker/regtest/dockerfile-deps/joinmarket/default.cfg
@@ -31,7 +31,7 @@ rpc_password = password
 rpc_wallet_file =
 
 [MESSAGING:server1]
-host = miniircd
+host = irc
 hostid = localhost1
 channel = joinmarket-pit
 port = 6667
