--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "repository": "git@github.com:joinmarket-webui/joinmarket-webui.git",
   "license": "MIT",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   },
   "homepage": ".",
   "devDependencies": {
     "@ibunker/bitcoin-react": "^0.1.13-cd",
-    "@popperjs/core": "^2.11.0",
+    "@popperjs/core": "^2.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -21,12 +22,12 @@
     "moving-letters": "^1.0.1",
     "nth-check": ">=2.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.4"
   },
   "dependencies": {
     "serve": "13.0.2"
