--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "http-proxy-middleware": "^2.0.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.1",
     "moving-letters": "^1.0.1",
     "nth-check": ">=2.0.1",
     "prettier": "^2.5.1",
@@ -38,7 +40,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -57,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,css,md}": "prettier --write"
   }
 }
