Add npm lint and format scripts

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
+    "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +64,6 @@
     ]
   },
   "lint-staged": {
-    "*.{js,jsx,json,css,md}": "prettier --write"
+    "src/**/*.{js,jsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
   }
 }
