Setup prettier config

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
       "react-app/jest"
     ]
   },
+  "prettier": {
+    "printWidth": 120
+  },
   "browserslist": {
     "production": [
       ">0.2%",
