--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     ]
   },
   "prettier": {
-    "printWidth": 120
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true
   },
   "browserslist": {
     "production": [
