Exclude non-existing tests for now

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
       # Checks
       - name: Lint
         run: npm run lint
-      - name: Test
-        run: npm test
+      # - name: Test
+      #   run: npm test
       # Build
       - name: Build
         run: npm run build
