--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "setup-format-hook": "husky install",
+    "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
     "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}"
   },
   "eslintConfig": {
