feat: developer docs (#37)
* Move existing docs to new file

* Add info about formatting

* Fix typo

* Add back lint script

* Automate husky setup

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install",
+    "postinstall": "husky install",
     "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
     "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}"
   },
