--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -94,12 +94,14 @@ services:
   joinmarket:
     container_name: jm_regtest_joinmarket
     build:
-      context: ./dockerfile-deps/joinmarket/latest
+      context: ./dockerfile-deps/joinmarket/webui-standalone
       dockerfile: Dockerfile
     restart: unless-stopped
     environment:
       READY_FILE: /root/.nbxplorer/btc_fully_synched
       ENSURE_WALLET: 1
+      APP_USER: joinmarket
+      APP_PASSWORD: joinmarket
       jm_gaplimit: 2000
       jm_rpc_wallet_file: jm_primary
       jm_max_cj_fee_abs: 42000000 # 0.42 btc
@@ -121,13 +123,15 @@ services:
       jm_socks5_host: tor
       jm_socks5_port: 9050
     expose:
-      - 8080 # payjoin server
+      - 80    # nginx
+      - 8080  # payjoin server
       - 62601 # obwatch
       - 27183 # joinmarketd
       - 28183 # jmwalletd
     ports:
       - "62601:62601"
       - "28183:28183"
+      - "28080:80"
     volumes:
       - "joinmarket_datadir:/root/.joinmarket"
       - "nbxplorer_datadir:/root/.nbxplorer"
@@ -141,12 +145,14 @@ services:
   joinmarket2:
     container_name: jm_regtest_joinmarket2
     build:
-      context: ./dockerfile-deps/joinmarket/latest
+      context: ./dockerfile-deps/joinmarket/webui-standalone
       dockerfile: Dockerfile
     restart: unless-stopped
     environment:
       READY_FILE: /root/.nbxplorer/btc_fully_synched
       ENSURE_WALLET: 1
+      APP_USER: joinmarket
+      APP_PASSWORD: joinmarket
       jm_gaplimit: 2000
       jm_rpc_wallet_file: jm_secondary
       jm_max_cj_fee_abs: 42000000 # 0.42 btc
@@ -168,12 +174,14 @@ services:
       jm_socks5_host: tor
       jm_socks5_port: 9050
     expose:
-      - 8080 # payjoin server
+      - 80    # nginx
+      - 8080  # payjoin server
       - 62601 # obwatch
       - 27183 # joinmarketd
       - 28183 # jmwalletd
     ports:
       - "29183:28183"
+      - "29080:80"
     volumes:
       - "joinmarket2_datadir:/root/.joinmarket"
       - "nbxplorer_datadir:/root/.nbxplorer"
