--- a/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
@@ -11,7 +11,7 @@ ENV REPO_REF master
 WORKDIR /src
 RUN git clone "$REPO" . --depth=10 --branch "$REPO_REF" && git checkout "$REPO_REF"
 
-RUN ./install.sh --disable-secp-check --without-qt
+RUN ./install.sh --docker-install --disable-secp-check --without-qt
 ENV DATADIR /root/.joinmarket
 ENV CONFIG ${DATADIR}/joinmarket.cfg
 ENV DEFAULT_CONFIG /root/default.cfg
@@ -21,23 +21,14 @@ ENV ENV_FILE "${DATADIR}/.env"
 
 COPY default.cfg "${CONFIG}"
 
-RUN . jmvenv/bin/activate && \
-    cd /src/scripts && \
-    pip install matplotlib && \
-    (python wallet-tool.py generate || true) && \
-    cp "${CONFIG}" "${DEFAULT_CONFIG}"
+RUN cd /src/scripts \
+    && (python wallet-tool.py generate || true) \
+    && cp "${CONFIG}" "${DEFAULT_CONFIG}"
 WORKDIR /src/scripts
 COPY docker-entrypoint.sh .
-COPY *.sh ./
 COPY autostart /root/
 COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
 ENV PATH /src/scripts:$PATH
-
-# generate ssl certificates for jmwalletd
-RUN mkdir -p "${DATADIR}/ssl/" && \
-    cd "${DATADIR}/ssl/" && \
-    openssl req -newkey rsa:4096 -x509 -sha256 -days 3650 -nodes -out cert.pem -keyout key.pem \
-    -subj "/C=US/ST=Utah/L=Lehi/O=Your Company, Inc./OU=IT/CN=example.com"
 
 # payjoin server
 EXPOSE 8080
