dev: fix creating wallets in docker setup 'latest'

--- a/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/ob-watcher.conf
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/ob-watcher.conf
@@ -1,6 +1,6 @@
 [program:ob-watcher]
 directory=/src/scripts/obwatch
-command=exec-wrapper.sh python ob-watcher.py --host 0.0.0.0
+command=python3 ob-watcher.py --host 0.0.0.0
 autostart=false
 stdout_logfile=/root/.joinmarket/logs/obwatch_stdout.log
 stdout_logfile_maxbytes=5MB
