--- a/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/jmwalletd.conf
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/jmwalletd.conf
@@ -1,6 +1,6 @@
 [program:jmwalletd]
 directory=/src/scripts
-command=exec-wrapper.sh python jmwalletd.py
+command=python3 jmwalletd.py
 autostart=false
 stdout_logfile=/root/.joinmarket/logs/jmwalletd_stdout.log
 stdout_logfile_maxbytes=5MB
