--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
+    "conventional-changelog": "^3.1.25",
     "http-proxy-middleware": "^2.0.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.1",
@@ -30,8 +31,6 @@
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "replace": "^1.2.1",
-    "standard-version": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
@@ -45,9 +44,7 @@
     "postinstall": "husky install",
     "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
     "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
-    "prepare:patch": "node scripts/release.js patch",
-    "prepare:minor": "node scripts/release.js minor",
-    "prepare:major": "node scripts/release.js major"
+    "changelog": "node scripts/changelog.mjs"
   },
   "eslintConfig": {
     "extends": [
