--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
+    "conventional-changelog": "^3.1.25",
     "http-proxy-middleware": "^2.0.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.1",
@@ -42,7 +43,8 @@
     "eject": "react-scripts eject",
     "postinstall": "husky install",
     "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
-    "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}"
+    "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
+    "changelog": "node scripts/changelog.mjs"
   },
   "eslintConfig": {
     "extends": [
