--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master@sha256:8e4beed972c9bf41fa6607bfad576ef75c6e73e47e978c96580bf8fd28751bbb
+FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
 
 COPY default.cfg "${CONFIG}"
 
