dev: use joinmarket-webui-dev-standalone in regtest setup (#99)
* feat: use joinmarket-webui standalone container in regtest setup

* dev: use build flag --docker-install in regtest env

* dev: build first jm instance from master; remove image based on btcpayserver

* dev: fix creating wallets in docker setup 'latest'

* update: use newest dev image from public registry

* review: remove checksum of dev-standalone image

* review: add '--pull' arg to docs for rebuilding regtest setup

--- a/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.9.7-slim-bullseye
 
-RUN apt-get update && \
-    apt-get install -qq --no-install-recommends curl tini sudo procps vim git iproute2 \
-    build-essential automake pkg-config libtool libgmp-dev libltdl-dev python3-dev virtualenv python3-pip supervisor && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update \
+    && apt-get install -qq --no-install-recommends tini procps vim git iproute2 supervisor \
+       curl build-essential automake pkg-config libtool python3-dev python3-pip python3-setuptools libltdl-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 ENV REPO https://github.com/JoinMarket-Org/joinmarket-clientserver
 ENV REPO_REF master
@@ -11,33 +11,26 @@ ENV REPO_REF master
 WORKDIR /src
 RUN git clone "$REPO" . --depth=10 --branch "$REPO_REF" && git checkout "$REPO_REF"
 
-RUN ./install.sh --disable-secp-check --without-qt
+RUN ./install.sh --docker-install --disable-secp-check --without-qt
+
 ENV DATADIR /root/.joinmarket
 ENV CONFIG ${DATADIR}/joinmarket.cfg
 ENV DEFAULT_CONFIG /root/default.cfg
 ENV DEFAULT_AUTO_START /root/autostart
 ENV AUTO_START ${DATADIR}/autostart
-ENV ENV_FILE "${DATADIR}/.env"
+ENV PATH /src/scripts:$PATH
 
 COPY default.cfg "${CONFIG}"
 
-RUN . jmvenv/bin/activate && \
-    cd /src/scripts && \
-    pip install matplotlib && \
-    (python wallet-tool.py generate || true) && \
-    cp "${CONFIG}" "${DEFAULT_CONFIG}"
+RUN cd /src/scripts \
+    && (python wallet-tool.py generate || true) \
+    && cp "${CONFIG}" "${DEFAULT_CONFIG}"
+
 WORKDIR /src/scripts
+
 COPY docker-entrypoint.sh .
-COPY *.sh ./
 COPY autostart /root/
 COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
-ENV PATH /src/scripts:$PATH
-
-# generate ssl certificates for jmwalletd
-RUN mkdir -p "${DATADIR}/ssl/" && \
-    cd "${DATADIR}/ssl/" && \
-    openssl req -newkey rsa:4096 -x509 -sha256 -days 3650 -nodes -out cert.pem -keyout key.pem \
-    -subj "/C=US/ST=Utah/L=Lehi/O=Your Company, Inc./OU=IT/CN=example.com"
 
 # payjoin server
 EXPOSE 8080
