--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -176,9 +176,11 @@ services:
       - 8080  # payjoin server
       - 62601 # obwatch
       - 27183 # joinmarketd
-      - 28183 # jmwalletd
+      - 28183 # jmwalletd api
+      - 28283 # jmwalletd websocket
     ports:
       - "29183:28183"
+      - "29283:28283"
       - "29080:80"
     volumes:
       - "joinmarket2_datadir:/root/.joinmarket"
