--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "conventional-changelog": "^3.1.25",
     "http-proxy-middleware": "^2.0.1",
     "husky": "^7.0.4",
+    "jest-watch-typeahead": "^0.6.5",
     "lint-staged": "^12.3.1",
     "moving-letters": "^1.0.1",
     "nth-check": ">=2.0.1",
