--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Jam",
   "version": "0.0.3",
   "private": true,
-  "description": "A user-friendly UI for JoinMarket",
+  "description": "A friendly UI for JoinMarket",
   "repository": "git@github.com:joinmarket-webui/joinmarket-webui.git",
   "license": "MIT",
   "engines": {
