feat: allow for deployment in subdirectory (#129)
* feat: allow for deployment in subdirectory

* Fix sprite path

* Basepath fix

* Update proxy and websocket paths

* Add nginx for testing deployment in subdirectory

* Update docker/regtest/docker-compose.yml

Co-authored-by: Thebora Kompanioni <theborakompanioni@users.noreply.github.com>

* nginx: Move file and add websocket connection

Co-authored-by: Thebora Kompanioni <theborakompanioni@users.noreply.github.com>

--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -1,6 +1,15 @@
 version: "3"
 
 services:
+  nginx:
+    container_name: jm_regtest_nginx_test_basepath
+    image: nginx
+    volumes:
+      - ./dockerfile-deps/nginx:/etc/nginx/templates
+    ports:
+      - "8000:80"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   bitcoind:
     container_name: jm_regtest_bitcoind
