review: move AllTheProviders to common test util dir

--- a/package.json
+++ b/package.json
@@ -75,7 +75,11 @@
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
   },
-  "jest": {
+  "jest": {    
+    "extraGlobals": [
+      "Math",
+      "localStorage"
+    ],
     "clearMocks": true
   }
 }
