--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "conventional-changelog": "^3.1.25",
     "http-proxy-middleware": "^2.0.1",
     "husky": "^7.0.4",
+    "jest-watch-typeahead": "^0.6.5",
+    "jest-websocket-mock": "^2.3.0",
     "lint-staged": "^12.3.1",
     "moving-letters": "^1.0.1",
     "nth-check": ">=2.0.1",
@@ -72,5 +74,12 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
+  },
+  "jest": {    
+    "extraGlobals": [
+      "Math",
+      "localStorage"
+    ],
+    "clearMocks": true
   }
 }
