refactor: rename to Jam (#131)
* refactor: dry up app layout (#126)

* Rename and update readme

* Fix typos

* Run npm install

* Use html for header

* Update package name

* Add back alt texts

* Update title

* Add note about buggy raspiblitz

* Remove raspiblitz gotchas

* Update src/components/App.jsx

Co-authored-by: Max Hillebrand <30683012+MaxHillebrand@users.noreply.github.com>

* Update src/components/Onboarding.jsx

Co-authored-by: Max Hillebrand <30683012+MaxHillebrand@users.noreply.github.com>

* Run prettier

* Update CONTRIBUTING.md

Co-authored-by: d11n <mail@dennisreimann.de>

* Update README.md

Co-authored-by: d11n <mail@dennisreimann.de>

* Fix wording

* Update title

Co-authored-by: Max Hillebrand <30683012+MaxHillebrand@users.noreply.github.com>
Co-authored-by: d11n <mail@dennisreimann.de>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "joinmarket-webui",
+  "name": "jam",
   "version": "0.0.3",
   "private": true,
-  "description": "JoinMarket Web UI",
+  "description": "A friendly UI for JoinMarket",
   "repository": "git@github.com:joinmarket-webui/joinmarket-webui.git",
   "license": "MIT",
   "engines": {
