--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
-    "i18next": "^21.6.12",
-    "i18next-browser-languagedetector": "^6.1.3",
-    "react-i18next": "^11.15.5",
     "serve": "13.0.2"
   },
   "scripts": {
@@ -50,7 +47,9 @@
     "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
     "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
     "version": "node scripts/changelog.mjs && git checkout -b \"prepare-v${npm_package_version}-$(date +%s)\" && git add --all && git commit --message \"chore(release): prepare v${npm_package_version}\" && git push --set-upstream origin $(git branch --show-current)",
-    "postversion": "which gh && gh pr create --title \"chore(release): prepare v${npm_package_version}\" --body \"Prepares the v${npm_package_version} release.\" --assignee @me --label release --repo joinmarket-webui/joinmarket-webui --draft"
+    "postversion": "which gh && gh pr create --title \"chore(release): prepare v${npm_package_version}\" --body \"Prepares the v${npm_package_version} release.\" --assignee @me --label release --repo joinmarket-webui/joinmarket-webui --draft",
+    "push-translations": "which tx && tx push --source",
+    "pull-translations": "which tx && tx pull --translations"
   },
   "eslintConfig": {
     "extends": [
@@ -78,7 +77,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
   },
-  "jest": {    
+  "jest": {
     "extraGlobals": [
       "Math",
       "localStorage"
