--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
+    "i18next": "^21.6.12",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "react-i18next": "^11.15.5",
     "serve": "13.0.2"
   },
   "scripts": {
