--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "i18next": "^21.6.12",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "react-i18next": "^11.15.5"
   },
   "dependencies": {
     "serve": "13.0.2"
@@ -75,7 +78,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
   },
-  "jest": {    
+  "jest": {
     "extraGlobals": [
       "Math",
       "localStorage"
