add 'jsx' instead of 'include'; disable 'noImplicitAny' for now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "jsx": "react-jsx",
+    "noImplicitAny": false,
     "skipLibCheck": true
-  },
-  "include": [
-    "src/**/*.(ts|tsx|js|jsx)"
-  ]
+  }
 }
