--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "conventional-changelog": "^3.1.25",
+    "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.4",
     "husky": "^7.0.4",
     "i18next": "^21.6.14",
