dev: display tumbler logs via npm script

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "regtest:clear": "docker-compose --file docker/regtest/docker-compose.yml down --volumes --remove-orphans",
     "regtest:up": "docker-compose --file docker/regtest/docker-compose.yml up",
     "regtest:down": "docker-compose --file docker/regtest/docker-compose.yml down",
-    "regtest:logs:jmwalletd": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/jmwalletd_stdout.log"
+    "regtest:logs:jmwalletd": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/jmwalletd_stdout.log",
+    "regtest:logs:tumbler": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/TUMBLE.log"
   },
   "eslintConfig": {
     "extends": [
