Change branch in regtest setup

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "regtest:logs:jmwalletd": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/jmwalletd_stdout.log",
     "regtest:logs:schedule": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/TUMBLE.schedule",
     "regtest:init": "./docker/regtest/init-setup.sh",
-    "regtest:mining": "watch -n 30 ./docker/regtest/mine-block.sh"
+    "regtest:mine": "watch -n 10 ./docker/regtest/mine-block.sh"
   },
   "eslintConfig": {
     "extends": [
